--- a/Start/Starter-Pack-HTML/src/index.html
+++ b/Start/Starter-Pack-HTML/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>33 - Post-processing</title>
+    <title>Starter Pack HTML</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
